objects/Pursuit_Template__c.object
<CustomObject>
    <fields>
        <fullName>AE_CBM__c</fullName>
        <label>AE / CBM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Shore_Y_or_N__c</fullName>
        <label>Best Shore? (Y or N)</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Binding_or_Non_Binding__c</fullName>
        <label>Binding or Non-Binding</label>
        <picklist>
            <picklistValues>
                <fullName>Binding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Binding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CYAC__c</fullName>
        <label>CYAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYR__c</fullName>
        <label>CYR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_HP_had_any_previous_relationshi__c</fullName>
        <label>Had any previous relationships or bids?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Opportunity_Plan__r.Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Credit_Rating__c</fullName>
        <label>Client&apos;s Credit Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_specific_issues_that_may_impact__c</fullName>
        <label>Client specific issues that may impact?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>TEXT(Opportunity_Plan__r.Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Lead__c</fullName>
        <label>Delivery Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engaged_a_3rd_party_intermediary_Who__c</fullName>
        <label>Engaged a 3rd party intermediary?Who?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engaged_a_3rd_party_intermediary__c</fullName>
        <label>Engaged a 3rd party intermediary?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Start_Date__c</fullName>
        <label>Expected Delivery Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Sign_Close_Date__c</fullName>
        <formula>Opportunity_Plan__r.Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Sign / Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explain_client_specific_issues__c</fullName>
        <label>Explain client specific issues?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_YR_Impact__c</fullName>
        <label>Fiscal YR Impact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_any_potential_deal_breakers__c</fullName>
        <label>Identify any potential deal breakers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Y_FTE__c</fullName>
        <label>If Y, % FTE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_detail_of_other_transactions__c</fullName>
        <label>If Yes,detail of other transactions?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_Multi_Vendor_IT_outsource_deal__c</fullName>
        <label>Is this Multi Vendor IT outsource deal?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Competitors_if_applicable__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Competitors (if applicable)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Business_Unit__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region_Location__c</fullName>
        <formula>&quot; &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Region / Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Likelihood_to_Win__c</fullName>
        <label>Likelihood to Win:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Submission_Date__c</fullName>
        <label>Next Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Plan</label>
        <referenceTo>Opportunity_Plan__c</referenceTo>
        <relationshipLabel>Pursuit Templates</relationshipLabel>
        <relationshipName>Pursuit_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_HP_Unit_s_IPG_PSG_TS__c</fullName>
        <label>Other HP Unit(s) (IPG, PSG, TS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsourcing_requirement_driver__c</fullName>
        <label>Outsourcing requirement driver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_win_Theme__c</fullName>
        <label>Primary win Theme</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TAC__c</fullName>
        <label>TAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCS__c</fullName>
        <label>TCS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term (Months):</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Project_M__c</fullName>
        <formula>Opportunity_Plan__r.Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Project ($M):</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Who_does_the_work_today__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Who does the work today?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_HP_be_Prime_or_Sub_Contractor__c</fullName>
        <label>Will HP be Prime or Sub Contractor?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Win_Strategy_Lab_End_in_Mind__c</fullName>
        <label>Win Strategy Lab End in Mind:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Pursuit Template</label>
    <nameField>
        <displayFormat>WSL_SSB-{000000000}</displayFormat>
        <label>Pursuit Templates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pursuit Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Client_specific_issues_Validation</fullName>
        <active>true</active>
        <description>Client specific issues Validation</description>
        <errorConditionFormula>AND (LEN( Explain_client_specific_issues__c ) &lt; 1, 
ISPICKVAL( Client_specific_issues_that_may_impact__c ,&quot;Y&quot;))</errorConditionFormula>
        <errorDisplayField>Explain_client_specific_issues__c</errorDisplayField>
        <errorMessage>Populate the required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Detail_of_other_transactions_Validation</fullName>
        <active>true</active>
        <description>detail of other transactions</description>
        <errorConditionFormula>AND (LEN( If_Yes_detail_of_other_transactions__c ) &lt; 1, 
ISPICKVAL( Is_this_Multi_Vendor_IT_outsource_deal__c ,&quot;Y&quot;))</errorConditionFormula>
        <errorMessage>Populate the required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Party_intermediary_Validation</fullName>
        <active>true</active>
        <description>Engaged a 3rd party intermediary? is y,then 	
Engaged a 3rd party intermediary?Who? field can&apos;t be blank</description>
        <errorConditionFormula>AND (LEN( Engaged_a_3rd_party_intermediary_Who__c ) &lt; 1, 
ISPICKVAL( Engaged_a_3rd_party_intermediary__c ,&quot;Y&quot;))</errorConditionFormula>
        <errorDisplayField>Engaged_a_3rd_party_intermediary_Who__c</errorDisplayField>
        <errorMessage>Populate the required field.</errorMessage>
    </validationRules>
</CustomObject>